<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    
    <!-- contraint layout as we need a login screen where the elements are arranged in a complex manner -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/shoe_store_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="12dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/shoe_storee"
            android:textColor="#3F51B5"
            android:textSize="36sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableStartCompat="@drawable/ic_baseline_shopping_cart_24" />

        <View
            android:id="@+id/view2"
            android:layout_width="210dp"
            android:layout_height="450dp"
            android:background="@drawable/ic_login_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view2">


            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/border_btn"
                android:text="@string/sign_up"
                android:layout_marginEnd="38dp"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/login"
                android:textSize="36sp" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:cardCornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="40dp"
                        android:layout_height="80dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_email" />


                    </FrameLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/email_address"
                            android:inputType="textEmailAddress"
                            android:paddingTop="0dp"
                            android:paddingBottom="14dp">

                        </com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <FrameLayout
                        android:layout_width="40dp"
                        android:layout_height="80dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:paddingTop="20dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_lock" />


                    </FrameLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:passwordToggleEnabled="true"
                        android:layout_marginBottom="18dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:paddingTop="0dp"
                            android:paddingBottom="21dp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_btn_bg"
            android:text="@string/login"
            android:textColor="#FFFFFF"

            app:layout_constraintEnd_toEndOf="@+id/cardView2"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>